[package]
name = "wait-timeout"
version = "0.1.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/wait-timeout"
homepage = "https://github.com/alexcrichton/wait-timeout"
documentation = "http://alexcrichton.com/wait-timeout"
description = """
A crate to wait on a child process with a timeout specified across Unix and
Windows platforms.
"""

[dependencies]
libc = "0.2"
cfg-if = "0.1"
time = "0.1"
